--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "6.1.1",
+    "@fortawesome/free-regular-svg-icons": "6.1.1",
+    "@fortawesome/free-solid-svg-icons": "6.1.1",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "babel-plugin-macros": "3.1.0",
     "bootstrap": "5.1.3",
     "react": "18.0.0",
     "react-bootstrap": "2.3.0",
